feat(ai): refactor agent architecture, fix RAG pipeline, add benchmark & CI
- Agent: module-per-tool registry (18 tools, schema+execution co-located), extract
  PlaceholderResolver/FallbackPlanner/GeneratedContentSanitizer, runtime 2395->1538 lines
- State: conversation-scoped TTL alignment, task registry single-store + O(1) approval token index
- Providers: AIService -> ChatProvider rename, destroy Volcano passthrough, strict ModelType codes
- Security: BucketPermissionChecker into common (file/ai/document adapters), ADR-0001 file lifecycle
- RAG: fix 5xx retry, sharded batch embedding (10-cap), rollback on partial failure, chapter-marker regex,
  content-aware Throttle (token-rate scheduler), KnowledgeQueryService unification (3 pipelines -> 1)
- Benchmark: RagBenchmarkTest scale tiers (500/1K docs), single-doc size tiers, p95 instrumentation
- CI: GitHub Actions (java21 maven unit tests + next.js lint/build)
- Docs: rag-benchmark.md report, ADR-0001